--- a/001_swift_memory/index.html
+++ b/001_swift_memory/index.html
@@ -247,6 +247,90 @@
                 Y aquí es dónde podríamos estar pensando: "¿Pero el String en Swift no se implementa mediante una estructura?, ¿Las estructuras no tenían
                 paso por valor?, ¿no nos has contado que las estructuras usan el Stack?"
             </p>
+            <p>
+                En realidad no, ya que esto depende de la implementación interna de String, al igual que, como veremos
+                más adelante en este mismo artículo, la implementación de nuestros tipos de datos serán los que determinen
+                si acaban usando la Stack o el Heap. 
+            </p>
+            <p>
+                ¿Cómo podríamos optimizar nuestro código?, Apple nos da la siguiente 
+                alternativa: 
+            </p>
+            <pre style="flex: 3; margin-right: 10px;">
+                <code>
+    enum Color { case blue, green, gray }
+    enum Orientation { case left, right }
+    enum Tail { case none, tail, buble }
+
+    struct Attributes: Hashable {
+        var color: Color
+        var orientation: Orientation
+        var tail: Tail
+    }
+
+    var cache = [Attributes: UIImage]()
+
+    func makeBalloon(_ color: Color, orientation: Orientation, tail: Tail) -> UIImage {
+        let key = Attributes(color: color, orientation: orientation, tail: tail)
+        if let image = cache[key] { return image }
+        // Aquí iría el resto de implementación para devolver el UIImage correspondiente,
+        // no nos vale para el ejemplo así que la obvio.
+        return UIImage()
+    }
+                </code>
+            </pre>
+            <p>
+                Podemos crear una estructura en la que "almacenar" los valores que necesitamos para la creación de 
+                nuestro "balloon". Necesitamos que implemente el protocolo Hashable para que pueda hacer de clave 
+                en el diccionario. Con esto, además, evitaríamos usar claves que bien podrían no tener nada que ver
+                con el contenido a almacenar. Pero, ¿realmente es notable el cambio?, usemos a nuestro buen amigo 
+                XCTest para realizar un par de pruebas de rendimiento: 
+            </p>
+            <pre style="flex: 3; margin-right: 10px;">
+                <code>
+    import XCTest
+
+    enum Color { case blue, green, gray }
+    enum Orientation { case left, right }
+    enum Tail { case none, tail, buble }
+
+    struct Attributes: Hashable {
+        var color: Color
+        var orientation: Orientation
+        var tail: Tail
+    }
+
+    final class MemoryHeapAndStacksTests: XCTestCase {
+        
+        func testWithString() throws {
+            self.measure {
+                for _ in 1...1_000_000 {
+                    _ = "\(Color.blue):\(Orientation.left):\(Tail.buble)"
+                }
+            }
+        }
+        
+        func testWithStruct() throws {
+            self.measure {
+                for _ in 1...1_000_000 {
+                    _ = Attributes(color: .blue, orientation: .left, tail: .buble)
+                }
+            }
+        }
+    }
+                </code>
+            </pre>
+            <p>
+                El primer test, testWithString, tardó 1.9 segundos de media en ejecutarse (se ejecuta 10 veces y nos 
+                muestra la media de todas las ejecuciones) mientras que el segundo, testWithStruct, solo 0.17 segundos.
+                No parece poca la diferencia...
+            </p>
+            <div style="display: flex; justify-content: space-between;">
+                <img src="images/average_03.png" alt="Muestra el tiempo que tarda en 
+                 el primer test: 1.9 segundos" style="max-width: calc(50% - 10px); border-radius: 5px;">
+                <img src="images/average_04.png" alt="Muestra el tiempo que tarda en 
+                el segundo test: 0.17 segundos" style="max-width: calc(50% - 10px); border-radius: 5px;">
+            </div>
         </section>
     </article>
     <footer>
