--- a/001_swift_memory/index.html
+++ b/001_swift_memory/index.html
@@ -515,7 +515,7 @@
                 orientados a objetos como Java o C++. 
             </p>
             <p>
-                De nuevo, podemos volver a caer en que no debería de suponer una gran diferencia, pero 
+                De nuevo, podemos volver a caer en pensar que no debería de suponer una gran diferencia, pero 
                 en caso de pensar así volveríamos a estar obviando muchos casos en los que conocer, o 
                 no, el método a "servir" estaría evitando toda una serie de optimizaciones para 
                 nuestro código. Por ejemplo, en un encadenamiento de métodos el encontrar este nivel 
